--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@ fieldset {
   border: 1px solid grey;
   padding: 20px;
   background: #969CBA;
+  align-items: center;
 }
 div.blog_post h2 a,
 div#header h1 a {
@@ -32,9 +33,18 @@ div#header h1 a {
   color: white;
 }
 div#header h1 {
-  margin-top: 0;
+  margin: 0;
   font-size: 2.5em;
+  text-align: left;
+  flex-grow: 1;
 }
+
+div#header form {
+  margin: 0;
+  text-align: right;
+  align-items: center;
+}
+
 div.blog_post h2 {
   margin-bottom: 0;
 }
