updated tag color delete and index page

--- a/main.css
+++ b/main.css
@@ -129,3 +129,11 @@ div#footer {
 .tagButton{
   background-color: greenyellow;
 }
+
+.redButton{
+  background-color: red;
+}
+
+.greenButton{
+  background-color: greenyellow;
+}
